Fix linebreak in texel density info

--- a/components/UI/Dropdown/Dropdown.module.scss
+++ b/components/UI/Dropdown/Dropdown.module.scss
@@ -122,7 +122,7 @@
   @include transition(0.1s);
 
   .option {
-    @include flex(row, true);
+    @include flex(row, true, true);
     padding: 0 1rem;
     height: 2.5rem;
     user-select: none;
@@ -158,6 +158,7 @@
       opacity: 0.5;
       font-size: 0.7em;
       margin-top: -0.3em;
+      white-space: nowrap;
     }
   }
   .active {
